--- a/src/Clothes.module.css
+++ b/src/Clothes.module.css
@@ -26,12 +26,29 @@
     
 }
 
-h3 {
-    font-size: 14px;
-    padding: 0 3%;
+h3, h4, h5 {
+    margin: 0;
+    padding: 0;
 }
 
-h4, h5 {
+.Name {
+    /* font-size: 14px; */
+    padding: 0 20px;
+    padding-top: 5px;
+}
+
+.Brand {
+    font-size: 14px;
+    padding-top: 20px;
+}
+
+.Price {
     text-align: left;
     padding-left: 20px;
+    font-size: 16px;
 }
+
+/* h4, h5 {
+    text-align: left;
+    padding-left: 20px;
+} */
