--- a/src/Details.module.css
+++ b/src/Details.module.css
@@ -45,10 +45,14 @@ h2 {
 
 h3 {
     padding: 0 0 20px 20px;
+    font-size: 18px;
 }
 
 h4 {
-    padding: 10px 0 20px 20px;
+    padding: 10px 20px 20px 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .PreviewContainer {
