--- a/src/HomePage.module.css
+++ b/src/HomePage.module.css
@@ -3,8 +3,9 @@
     margin-top: 60px;
 }
 
-h2 {
-    padding: 20px 0;
+.h2 {
+    text-align: center;
+    padding: 20px 0 40px 0;
 }
 
 .ClothesDiv{
