--- a/src/Footer.module.css
+++ b/src/Footer.module.css
@@ -7,6 +7,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     background-color: lightblue;
+    bottom: 0;
 }
 
 .FooterH5 {
