--- a/src/ShopPage.module.css
+++ b/src/ShopPage.module.css
@@ -4,7 +4,8 @@
 
 .ShopDiv {
     margin-top: 60px;
-    height: calc(100vh - 60px);
+    /* height: calc(100vh - 60px); */
+    height: 100vh;
     width: 100%;   
 }
 
@@ -40,29 +41,37 @@
 
 .LeftProdList {
     width: 50%;
-    min-height: 200px;
-    max-height: 550px;
+    /* min-height: 200px;
+    max-height: 550px; */
+    height: 300px;
     overflow: auto;
     background-color: lightblue;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    /* box-sizing: content-box; */
+    /* padding-bottom: 4px; */
 }
 
 .ImgDiv {
-    width: 98%;
+    width: 96%;
     height: 110px;
     background-color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
     /* align-items: flex-start; */
+    margin: 4px 0;
 }
+
+/* .ImgDiv:last-of-type {
+    margin-bottom: 20px;
+} */
 
 .ImgDiv > img {
     /* width: 15%; */
-    height: 105px;
+    height: 70px;
 }
 .TextDiv {
     width: 80%;
@@ -77,27 +86,28 @@
     margin: 0;
     padding: 0;
     text-align: left;
+    padding-left: 4%;
 }
 
 /* name */
 .TextDiv > h3 {
-    padding-top: 1%;
+    padding-top: 2px;
 }
 
 /* quantity */
 .TextDiv > h5 {
-    padding-top: 3%;
+    padding-top: 2px;
     font-size: 16px;
 }
 
 /* price */
 .TextDiv > h4 {
-    padding-top: 3%;
+    padding-top: 2px;
 }
 
 .RightAmount {
-    width: 30%;
-    height: 200px;
+    width: 35%;
+    height: 250px;
     background-color: lightblue;
     text-align: left;
 }
@@ -114,7 +124,7 @@
 
 .RightAmount h5 {
     font-size: 18px;
-    margin-top: 20px;
+    margin-top: 110px;
     margin-left: 8%;
 }
 
