--- a/src/Checkout.module.css
+++ b/src/Checkout.module.css
@@ -1,5 +1,5 @@
 .Main {
-    margin-top: 60px;
+    margin-top: 10%;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -9,25 +9,47 @@
     align-items: center;
 }
 
-.CheckDiv {
+.CheckContainer {
     margin-top: 30px;
+    z-index: -1;
+}
+
+.CheckDiv {
+    /* margin-top: 30px; */
     width: 150px;
     height: 150px;
     background-color: lightblue;
     border-radius: 50%;
     position: relative;
+    /* display: block; */
 }
 
-.CheckDiv::before {
-  position: absolute;
-  width: 50px;
-  height: 8px;
-  background-color: black;
-  border-bottom: 8px;
-  transform: rotate(135deg);
-  /* right: 30px;
-  bottom: 70px; */
+.CheckDiv:before {
+    content: '';
+    display: block;
+    position: relative;
+    width: 50px;
+    height: 8px;
+    background-color: white;
+    border-bottom: 8px;
+    transform: rotate(135deg);
+    left: 63px;
+    bottom: -48px;
 }
+
+.CheckDiv:after {
+    content: '';
+    position: relative;
+    display: block;
+    width: 30px;
+    height: 8px;
+    background-color: white;
+    border-bottom: 8px;
+    transform: rotate(45deg);
+    /* transform-origin: center; */
+    left: 45px;
+    bottom: -52px;
+  }
 
 .h1 {
     font-size: 32px;
