--- a/src/Checkout.module.css
+++ b/src/Checkout.module.css
@@ -68,3 +68,81 @@
     margin-top: 10px;
     font-size: 26px;
 }
+
+@media (max-width: 380px) {
+
+    .Main {
+        margin-top: 120px;
+        width: 100%;
+        height: calc(100% - 80px);
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    .CheckContainer {
+        margin-top: 20px;
+        z-index: -1;
+    }
+    
+    .CheckDiv {
+        /* margin-top: 30px; */
+        width: 150px;
+        height: 150px;
+        background-color: lightblue;
+        border-radius: 50%;
+        position: relative;
+        /* display: block; */
+    }
+    
+    .CheckDiv:before {
+        content: '';
+        display: block;
+        position: relative;
+        width: 50px;
+        height: 8px;
+        background-color: white;
+        border-bottom: 8px;
+        transform: rotate(135deg);
+        left: 63px;
+        bottom: -48px;
+    }
+    
+    .CheckDiv:after {
+        content: '';
+        position: relative;
+        display: block;
+        width: 30px;
+        height: 8px;
+        background-color: white;
+        border-bottom: 8px;
+        transform: rotate(45deg);
+        /* transform-origin: center; */
+        left: 45px;
+        bottom: -52px;
+      }
+    
+    .h1 {
+        margin-top: 20px;
+        font-size: 28px;
+    }
+    
+    .h3 {
+        font-size: 20px;
+        margin: 0;
+        padding: 0;
+        margin-top: 20px;
+        padding: 0 20px;
+        text-align: center;
+    }
+    
+    .p {
+        margin: 0;
+        padding: 0; 
+        margin-top: 50px;
+        font-size: 22px;
+    }
+
+}
