--- a/src/Clothes.module.css
+++ b/src/Clothes.module.css
@@ -52,3 +52,52 @@ h3, h4, h5 {
     text-align: left;
     padding-left: 20px;
 } */
+
+@media (max-width: 380px) {
+    .ClothCard {
+        width: 80%;
+        height: auto;
+        padding-bottom: 10px;
+    }
+    
+    .AccessCard {
+        width: 80%;
+        height: auto;
+        margin: 0 5% 50px;
+        background-color: lightblue;
+        -webkit-box-shadow: 1px 1px 8px 7px rgba(0,0,0,0.5);
+        -moz-box-shadow: 1px 1px 8px 7px rgba(0,0,0,0.5);
+        box-shadow: 1px 1px 8px 7px rgba(0,0,0,0.5);
+        padding-bottom: 10px;    
+    
+    }
+    
+    
+    .CardImg {
+        width: 100%;
+        height: auto;
+        
+    }
+    
+    h3, h4, h5 {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .Name {
+        /* font-size: 14px; */
+        padding: 0 20px;
+        padding-top: 5px;
+    }
+    
+    .Brand {
+        font-size: 14px;
+        padding-top: 20px;
+    }
+    
+    .Price {
+        text-align: left;
+        padding-left: 20px;
+        font-size: 16px;
+    }
+}
