--- a/src/Details.module.css
+++ b/src/Details.module.css
@@ -84,3 +84,96 @@ h4 {
     height: auto;
     cursor: pointer;
 }
+
+@media (max-width: 380px) {
+
+        
+    .DetailsDiv {
+        margin-top: 100px;
+        margin-bottom: 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        width: 100%;
+        height: calc(100% - 80px);  
+
+    }
+
+    .AsideImg {
+        width: 30%;
+        height: auto;
+    }
+
+    .AsideImg img{
+        width: 100%;
+        height: auto;  
+    }
+
+    .AsideDetails {
+        width: 60%;
+        height: auto;
+        background-color: lightblue;
+        padding: 0 0 20px
+    }
+
+    h1, h2, h3, h4 {
+        text-align: left;
+        margin: 0;
+        padding: 0;
+    }
+
+    .AsideDetails h1 {
+        padding: 10px 0 0 10px;
+        font-size: 18px;
+    }
+
+    h2 {
+        padding: 10px 0 10px 10px;
+        font-size: 16px;
+    }
+
+    h3 {
+        padding: 0 0 0px 10px;
+        font-size: 14px;
+    }
+
+    h4 {
+        padding: 10px 20px 10px 10px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .PreviewContainer {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .PreviewContainer button {
+        margin: 20px auto;
+        padding: 6px 10px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 12px;
+    }
+
+    .PreviewDiv {
+        margin-left: 0;
+        width: 100%;
+        height: auto;
+        background-color: white;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .PreviewDiv img {
+        width: 19%;
+        height: auto;
+        cursor: pointer;
+    }
+}
